<resources>
    <string name="app_name">reparto</string>
    <string name="title_activity_login">Iniciar sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña (Opcional)</string>
    <string name="action_sign_in">Iniciar sesión o registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- TITULOS DE ACTIVITYS -->
    <string name="title_activity_mac_home_sin_ruta">Sin ruta</string>
    <string name="title_activity_mac_ruta">Ruta</string>
    <string name="title_activity_mac_cliente">Clientes</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="txtAlert">No te encuentras en ruta</string>
    <string name="txtAlertOK">Estás en ruta</string>
    <string name="btnIniciarRuta">Iniciar ruta</string>
    <string name="btnRuta">Ruta</string>
    <string name="btnRutaDesc">Ver detalles de la ruta actual</string>
    <string name="btnAlmacen">Almacén</string>
    <string name="btnAlmacenDesc">Ver detalles del almacén</string>
    <string name="btnConfiguraciones">Configuraciones</string>
    <string name="btnConfiguracionesDesc">Configurar notificaciones y otras cosas</string>

    <string name="btnIniciarRutaDesc">Asigna la ruta y hace la carga inicial del día</string>


    <string name="btnCerrarSesion">Cerrar sesión</string>
    <string name="btnCerrarSesionDesc">Cerrar sesión iniciada y cerrar la aplicación</string>

    <string name="btnFinalizarRuta">Finalizar ruta</string>
    <string name="btnFinalizarRutaDesc">Finaliza la ruta y hace la descarga final</string>
    <string name="btnDescargarMercancia">Descargar mercancía</string>
    <string name="btnDescargarMercanciaDesc">Entregar mercancía devuelta al almacén</string>
    <string name="btnRecargaMercancia">Recarga de mercancía</string>
    <string name="btnRecargaMercanciaDesc">Cargar nueva mercancía a una ruta ya indicada</string>
    <string name="btnClientes">Clientes</string>
    <string name="btnClientesDesc">Funciones varias para los clientes</string>
    <string name="btnMensajes">Mensajes</string>
    <string name="btnMensajesDesc">Desde aqui puede ver los mensajes del almacén</string>

    <!-- <> Botones usados para primera carga del dia (PRC) -->
    <string name="btnConfirmarProd">Confirmar productos por cliente</string>
    <string name="btnConfirmarProdDesc">Confirmar produtos que tendrá cada cliente en la ruta</string>
    <string name="btnVerProductos">Ver productos cargados</string>
    <string name="btnVerProductosDesc">Ver lista de productos actualmente cargados</string>
    <string name="btnAgregarProd">Agregar productos sin cliente</string>
    <string name="btnAgregarProdDesc">Agregar productos sin asignar cliente (para venta extraordinaria)</string>
    <string name="btnGuardarCambiosPRC">Guardar cambios y empezar la ruta</string>
    <string name="btnGuardarCambiosPRCDesc">Guarda todos los cambios realizados e inicializa la ruta</string>

    <!-- </> Botones usados para primera carga del dia (PRC) -->
    <!-- <> Textos usados para primera carga del dia (PRC) -->
    <string name="strTitlePRC">Primera carga del dia</string>
    <string name="strTotalProCargadosPRC">Total de productos cargados</string>

    <!-- </> Textos usados para primera carga del dia (PRC) -->


    <!-- COC: Confirmar clientes -->
    <string name="lblCOCTitulo">Confirma los clientes de la ruta</string>
    <string name="lblCOCTotalRuta">Total de clientes en ruta</string>
    <string name="lblCOCTotalRutaNoConfirmados">Total de clientes sin confirmar</string>
    <string name="lblCOCTotalRutaNoAsignados">Total de clientes sin productos asignados</string>
    <string name="title_activity_mac_mensajes" translatable="false">mac_mensajes</string>
    <string name="btnGuardarCambiosCOC">Guardar cambios</string>
    <!-- COC: Confirmar clientes -->

    <!-- -->
    <string name="ACEPTAR">ACEPTAR</string>
    <string name="RECHAZAR">RECHAZAR</string>
    <string name="CANCELAR">CANCELAR</string>
    <string name="GUARDAR">GUARDAR CAMBIOS</string>

    <!-- <> PPC Productos por cliente -->
    <string name="strTitlePPC">Productos por cliente</string>
    <string name="strTitlePPC1">Agregar productos sin cliente</string>
    <string name="strTitlePPC2">Lista de productos</string>
    <string name="strTitlePPC3">Lista de productos que faltan por entregar</string>
    <!-- </> PPC Productos por cliente -->

    <!-- <>  MSG Mensajes -->
    <string name="strEnviarMSG">Escribir mensaje</string>
    <!-- </> MSG Mensajes -->

    <!-- <> Clientes CRU -->
    <string name="strClienteCRU_CrearCliente">Crear nuevo cliente</string>
    <string name="strClienteCRU_Title">Listado de clientes de almacén</string>
    <string name="strClienteCRU_Info">Información del cliente</string>
    <string name="strRFCCRU" translatable="false">RFC</string>
    <string name="strNombreClienteCRU" translatable="false">Razon social</string>
    <string name="strRegimenFiscalCRU" translatable="false">Regimen Fiscal</string>
    <string name="strDireccionClienteCRU">Dirección</string>
    <string name="strTelefonoClienteCRU">Telefono</string>


    <!-- </> Clientes CRU -->

    <!-- <> Ruta menu -->
    <string name="strRUTA">Opciones de ruta</string>
    <string name="strTotalProductosRUTA">Total de productos por entregar</string>
    <string name="strVerProductosTitleRUTA">Ver productos por entregar</string>
    <string name="strVerProductosDescRUTA">Ver los productos que faltan por entregar</string>

    <string name="strEntregaMercanciaTitleRUTA">Entrega de mercancía</string>
    <string name="strEntregarMercanciaDescRUTA">Entregar mercancía al cliente de la ruta</string>

    <string name="strRecogerMercanciaTitleRUTA">Recoger mercancía</string>
    <string name="strRecogerMercanciaDescRUTA">Recoger la mercancía devuelta por el cliente</string>

    <string name="strVerUbicacionClientesTitleRUTA">Ver ubicación de clientes</string>
    <string name="strVerUbicacionClientesDescRUTA">Ver ubicación en Google Maps de los clientes que están en ruta</string>

    <string name="strFinalizarRutaTitleRUTA">Finalizar ruta</string>
    <string name="strFinalizarRutaDescRUTA">Finaliza la ruta y genera el corte para vaciar la información en el almacén</string>
    <string name="title_activity_mac_ubicacion_cliente">Ubicacion de clientes</string>

    <!-- </> Ruta menu -->

    <string name="strCONFIG">Configuraciones</string>
    <string name="strCONFIG_CambiarTemaTitle">Cambiar el tema</string>
    <string name="strCONFIG_CambiarTemaDesc">Cambiar el tema de la aplicación</string>

    <string name="strCONFIG_CambiarPrecisionTitle">Cambiar presición</string>
    <string name="strCONFIG_CambiarPrecisionDesc">Cambiar el tipo de presición Alta, media o baja</string>

    <string name="strCONFIG_PINTitle">Agregar PIN</string>
    <string name="strCONFIG_PINDesc">Pedirá PIN la proxima vez que inicie la app</string>

    <string name="strCONFIG_DatosUsuarioTitle">Mis datos personales</string>
    <string name="strCONFIG_DatosUsuarioDesc">Permite editar y ver los datos personales de la cuenta</string>

    <string name="strCONFIG_CerrarSesionTitle">Cerrar sesión</string>
    <string name="strCONFIG_CerrarSesionDesc">Permite cerrar sesión e iniciar con otra cuenta de usuario</string>
    <string name="title_activity_mac_temas" translatable="false">mac_temas</string>
    <string name="section_format" translatable="false">Hola mundo</string>

    <!-- PIN -->
    <string name="strPIN_Title">Asignar o cambiar el PIN</string>
    <string name="strPIN_Text" translatable="false">1234</string>
    <string name="strPIN_Boton">Guardar o cambiar pin</string>

    <string name="btnSincronizarTitle">Sincronizar clientes</string>
    <string name="btnSincronizarDetalle">Sincronizar clientes con el servidor remoto</string>
    <string name="btnObtenerClientesTitle">Obtener clientes del servidor</string>
    <string name="btnObtenerClientesDetalle">Obtener clientes guardados en el servidor</string>
    <string name="btnCambiarHOSTTitle">Cambiar host remoto</string>
    <string name="btnCambiarHOSTDetail">Permite cambiar la dirección IP del host remoto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
