<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnlBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.twicky.estebancarranza.reparto.activities.mac_pin">

    <TextView
        android:id="@+id/lblTituloPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/strPIN_Title"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/strPIN_Text"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColorHint="@color/text_colorHint" />

    <Button
        android:id="@+id/btnActivarPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/strPIN_Boton"
        android:textColor="@color/background_color" />

    <Button
        android:id="@+id/btnDesactivarPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Desactivar PIN"
        android:textColor="@color/background_color" />
</LinearLayout>
