<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="20dp"
    tools:openDrawer="start"
    tools:context="com.twicky.estebancarranza.reparto.mac_prc_confirmarCliente">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/lblConfirmarClientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCOCTitulo"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/lnrl_totalClientes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/lblTotalClientes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lblCOCTotalRuta" />

                <TextView
                    android:id="@+id/lblTotalClientesVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="10"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnrl_totalClientesConfirmados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/lblTotalClientesNoConfirmados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lblCOCTotalRutaNoConfirmados" />

                <TextView
                    android:id="@+id/lblTotalClientesNoConfirmadosVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnrl_totalClientesAsignados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/lblTotalClientesAsignados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lblCOCTotalRutaNoAsignados" />

                <TextView
                    android:id="@+id/lblTotalClientesNoAsignadosVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="textEnd" />
            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/lstClientes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="textStart">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>


    </ScrollView>

</LinearLayout>
