<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnlr_productos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"

    android:gravity="start"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cvProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/background_color">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_delete"
            android:layout_width="56dp"
            android:layout_height="56dp"

            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="top|end"

            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"

            android:clickable="true"
            app:backgroundTint="@color/background_color"
            app:elevation="0dp"
            app:rippleColor="@color/cardview_dark_background"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <RelativeLayout
            android:id="@+id/rlContainerProducto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/app_name"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnRechazarPPC"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CANCELAR"

                        />

                    <EditText
                        android:id="@+id/txtTotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:inputType="number"
                        android:textAlignment="center" />

                    <Button
                        android:id="@+id/btnConfirmarPPC"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ACEPTAR" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>



</android.support.design.widget.CoordinatorLayout>